# CultHeld

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
CultHeld/configuration/: configuration.py
CultHeld/constants/: paths.py
CultHeld/venues/: combined_venues.py  de_balie.py  paradiso.py
CultHeld/venues/bioscoop/: fchyena.py  studiok.py
CultHeld/venues/concert/: concertgebouw.py  melkweg.py
CultHeld/venues/de_balie/: de_balie.py
CultHeld/venues/studiok/: studiok.py
backend/: DEPLOY.md  README.md  app.py  events.duckdb  pyproject.toml
data_acquisition/: .pre-commit-config.yaml  Makefile  README.md  SCHEMA.md  env.txt  pyproject.toml  run_all.py
data_acquisition/archive/: pyproject.toml
data_acquisition/archive/cultheld/configuration/: configuration.py
data_acquisition/archive/cultheld/configuration/utils/: utils_configuration.py
data_acquisition/archive/cultheld/constants/: paths.py
data_acquisition/archive/cultheld/venues/: combined_venues.py
data_acquisition/archive/cultheld/venues/actualiteit/: de_balie.py
data_acquisition/archive/cultheld/venues/bioscoop/: fchyena.py  studiok.py
data_acquisition/archive/cultheld/venues/concert/: cinetol.py  concertgebouw.py  melkweg.py  paradiso.py
data_acquisition/archive/cultheld/venues/theater/: carre.py
data_acquisition/archive/de_balie/: test_de_balie.py
data_acquisition/config/: __init__.py  carre.py  concertgebouw.py  de_balie.py  fchyena.py  melkweg.py  paradiso.py  studiok.py
data_acquisition/core/: transform.py
data_acquisition/mapping/: carre_mapping.py  concertgebouw_mapping.py  de_balie_mapping.py  fchyena_mapping.py  melkweg_mapping.py  paradiso_mapping.py  studiok_mapping.py
data_acquisition/staging/: carre.py  concertgebouw.py  de_balie.py  fchyena.py  melkweg.py  paradiso.py  studiok.py
data_acquisition/tests/: test_core_transform_columns.py  test_fchyena_html.py  test_http_utils.py  test_validation_policy.py
data_acquisition/utils/: duckdb_utils.py  http_utils.py  incremental.py  logging_config.py  staging_utils.py  validation.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
output/: carre.csv  combined_venues.csv  concertgebouw.csv  de_balie.csv  fchyena.csv  melkweg.csv  paradiso.csv  studiok.csv
scripts/: test.ps1
(+6 files in other folders)
