[tool.poetry]
name = "data_acquisition"
version = "0.1.0"
description = ""
authors = ["Ambrosius Thomas Vermeulen <ambrosius.thomas.vermeulen@cern.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.31.0"
pandas = "^2.0.3"
bs4 = "^0.0.1"
flatten-json = "^0.1.13"
duckdb = "^1.4.3"
playwright = "^1.57.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.6.9"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["pandas.*", "requests.*", "bs4.*"]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data/core/*.duckdb", "data/*.csv", "**/__pycache__/**", "archive/**"]

[tool.ruff.lint]
select = [
	"E",
	"F",
	"I",
	"UP",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["core", "staging", "mapping", "utils", "config"]
force-single-line = false